--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,10 +1,3 @@
-.header .active {
-    /*gras et souligné sur la page active*/
-     color: var(--myYellow);
-     text-shadow: 1px 0 0 var(--myYellow);
-     text-decoration-line: underline;
- }
- 
  /*header et navigation*/
  .header {
      height: 150px;
@@ -32,11 +25,18 @@
      font-weight: 500;
      text-transform: uppercase;
  }
+
+ .header .active {
+    /*gras et souligné sur la page active*/
+     color: red;
+     text-shadow: 1px 0 0 red;
+     text-decoration-line: underline;
+ }
  
  .header ul li a:hover {
      padding: 0;
-     color: var(--myYellow);
-     text-shadow: 1.5px 0 0 var(--myYellow);
+     color: red;
+     text-shadow: 1.5px 0 0 red;
      text-decoration-line: underline;
  }
  
