--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,7 +23,7 @@
 }
   @font-face {
     font-family: 'Cantarell';
-    src: url(../polices/Cantarell/Cantarell-Regular.ttf) format('ttf');
+    src: url(../polices/Cantarell/Cantarell-Regular.ttf), url(../polices/Cantarell/Cantarell-Bold.ttf), url(../polices/Cantarell/Cantarell-BoldItalic.ttf) format('ttf');
 }
   @font-face {
     font-family: 'Adventure';
@@ -31,7 +31,21 @@
 }
 
 html, body {
-  color: var(--myWhite)
+  color: var(--myWhite);
+  font-family: 'Cantarell';
+  font-size: 16px;
+}
+
+p {
+  margin: 30px 0
+}
+
+h2 {
+  font-family: 'Rajdhani';
+  text-transform: uppercase;
+  font-size: 36px;
+  font-weight: bold;
+  margin: 20px 0;
 }
 
 section {
