--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,22 +1,21 @@
-
+/*Images d'illustrations Alliés et ennemies*/
 .illPic {
     display: flex;
     justify-content: space-between;
-    width: 100%
-}
-.illPic div {
-    height: 600px;
-    width: 400px;
-    overflow: hidden;
-    position: relative;
-}
+    margin: 50px 0;  
+  }
 
-.illPic img {
-    height: 600px;
-    position: absolute;
+  .illPic figure {
+    width: 30%;
+    overflow: hidden
+  }
+  
+  .illPic img {
+    max-height: 400px;
+    position: relative;
     left: 50%;
-    transform: translate(-50%);
-}
+    transform: translateX(-50%)
+  }
 
 /*SECTION 1*/
 .sect1 {
@@ -38,6 +37,18 @@
 }
 .sect1__contentDiv {
     margin-left: 25px;
+}
+
+@media (max-width: 600px) {
+    .sect1 h1 {
+        font-size: 96px ;
+    }
+    .sect1 h2 {
+        font-size: 36px ;
+    }
+    .sect1 {
+        flex-direction: column;
+    }
 }
 
 /*SECTION 5 : multimédia*/
@@ -96,113 +107,6 @@
     width: 100%;
 }
 
-
-/* SECTION 7: Formulaire */
-.sec7 {
-    background: linear-gradient(135deg, #EDDEBF60, #19587D60);
-    padding: 20px 15%;
-    min-width: 350px;
-}
-
-.sec7__title {
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-.sec7__form__div {
-    margin: 30px 0 10px;
-}
-
-.sec7__form__div__h4 {
-    font-size: 18px;
-    font-weight: 100;
-}
-
-.sec7__form__div__input,
-.sec7__form__div__checkbox,
-.sec7__form__div__fieldset__legend,
-.sec7__form__div__textarea,
-.sec7__form__div__frequence,
-.sec7__form__div__selectContainer__select {
-    color: rgba(255, 255, 255, 0.5);
-    background: none;
-    border: none;
-    border-bottom: solid 1px rgba(255, 255, 255, 0.5);
-    font-size: 12px;
-    font-family: 'Space Grotesk';
-    margin: 10px 0;
-    width: 100%
-}
-
-.sec7__form__div__frequence {
-    border-bottom: none;
-}
-
-.sec7__form__div__selectContainer select option {
-    background-color:grey;
-}
-
-.sec7__form__div__checkbox {
-    border-bottom: none;
-    margin: 10px 0 20px;
-    width: 70%;
-    min-width: 250px;
-}
-
-.sec7__form__div__checkbox input[type="checkbox"] {
-    	position: relative;
-        bottom: -3px;
-        right: -5px;
-}
-
-fieldset {
-    border: none;
-}
-
-.sec7__form__div__fieldset__radioContain {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-
-/* Transformer radio en bouton */
-.sec7__form__div__fieldset__radioContain__choice {
-    display: none;
-}
-
-.sec7__form__div__fieldset__radioContain__choice + label {
-    width: 70px;
-    padding: 5px 0;
-    margin: 5px; 
-    font-size: 12px;
-    font-family: Rajdhani;
-    text-align: center;
-    border-image: linear-gradient(60deg,var(--myGrey50), var(--myMarineBleu)) 1 / 1.5px;
-    -o-border-image: linear-gradient(60deg,var(--myGrey50), var(--myMarineBleu)) 1 / 1.5px;
-}
-
-.sec7__form__div__fieldset__radioContain__choice+ label:hover {
-    background-color: rgba(255, 255, 255, 0.5);
-    cursor:pointer;
-}
-
-.sec7__form__div__fieldset__radioContain__choice:checked + label {
-    background-color: rgba(255, 255, 255, 0.5);
-}
-
-.sec7__form__div textarea::placeholder {
-    font-size: 12px;
-    font-family: 'Space Grotesk';
-}
-
-.sec7__form__submit {
-    text-align: center;
-}
-
-.sec7__form__submit button {
-    border: none;
-}
-
 /* SECTION 8: Citations */
 .sec8 {
     width: 90%;
@@ -210,13 +114,13 @@ fieldset {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background:
-        url(../assets/logo/icon_guillemets_1.png)no-repeat top left,
-        url(../assets/logo/icon_guillemets_2.png) no-repeat bottom right; */
+    background:
+        url(../assets/icones/icon_guillemets_1.png)no-repeat top left,
+        url(../assets/icones/icon_guillemets_2.png) no-repeat bottom right;
 }
 
 .sec8__figure {
-    width: 40%;
+    min-width: 60%;
     margin: 75px 0;
     font-size: 12px;
     text-align: center;
