--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,6 +40,10 @@ p {
   margin: 30px 0;
 }
 
+a {
+  color: white;
+}
+
 h2 {
   font-family: 'Rajdhani';
   text-transform: uppercase;
@@ -115,23 +119,25 @@ section {
   justify-content: center;
 }
 
-.btnContain__btn {
+button, .btnContain__btn {
   text-align: center;
   width: 200px;
   padding: 10px;
   margin: 0 10px;
+  border-radius: 10px;
   background: var(--myBlue);
+  border: none;
 }
 
-.btnContain__btn:hover,
-.btnContain__btn:focus {
+button:hover, .btnContain__btn:hover,
+button:focus, .btnContain__btn:focus {
   background: linear-gradient(80deg, #07338C, #B11313);
   cursor:pointer;
 }
 
 .btnContain__btn a,
 .btnContain__btn {
-  font-family: 'Rajdhani';
+  font-family: 'Adventure';
   font-size: medium;
   font-weight: 400;
   color: white;
