--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -1,21 +1,113 @@
 .inscription .formulaire {
-    background: linear-gradient(to left, rgb(18, 91, 52), rgb(1, 92, 148));
-    max-width: 75%;
+    background: radial-gradient(at 200% 50%, #B11313 , #07338C);
+    max-width: 85%;
     padding: 60px 10%;
     margin-top: -35px;
     border-radius: 10px;
 }
 
 form {
-    background: linear-gradient(90deg, rgba(153, 158, 158, 0.8), rgba(92, 93, 94, 0.8));
+    background: linear-gradient(90deg, rgba(153, 158, 158, 0.7), rgba(92, 93, 94, 0.7));
     padding: 25px;
     border-radius: 10px;
+}
+
+form label {
+    font-family: 'Adventure';
+    color: white
+}
+
+.acceptanceContainer {
+    display: flex;
+    align-items: center;
+}
+
+.form-check-label {
+    font-family: 'Cantarell' ;
+}
+
+.form-control {
+    border : solid 1px white;
+    background-color: transparent;
+    border-radius: 0px;
 }
 
 .errorMessage {
     border: solid 1px grey;
     border-radius: 10px;
     background-color: yellow;
-    color: red;
+    color: #B11313;
     font-weight: bold;
 }
+
+ /* The switch - the box around the slider */
+ .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input[type="checkbox"] {
+    opacity: 0;
+    width: 60px;
+    height: 30px;
+    position: absolute;
+    z-index: 10;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #B11313dd;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input[type="checkbox"]:checked + .slider {
+    background-color: #07338Cdd;
+  }
+  
+  input[type="checkbox"]:focus + .slider {
+    box-shadow: 0 0 1px #07338Cdd;
+  }
+  
+  input[type="checkbox"]:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+  
+  .socialLogo {
+    width: 50%;
+    min-width: 100px;
+    display: flex;
+    justify-content: space-between;
+  }
