--- a/src/styles/ContactForm.css
+++ b/src/styles/ContactForm.css
@@ -25,11 +25,11 @@
 .sec7__form__div__textarea,
 .sec7__form__div__frequence,
 .sec7__form__div__selectContainer__select {
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.95);
     background: none;
     border: none;
     border-bottom: solid 1px rgba(255, 255, 255, 0.5);
-    font-size: 12px;
+    font-size: 14px;
     font-family: 'Space Grotesk';
     margin: 10px 0;
     width: 100%
@@ -72,14 +72,14 @@ fieldset {
 }
 
 .sec7__form__div__fieldset__radioContain__choice + label {
-    width: 70px;
+    width: 100px;
     padding: 5px 0;
     margin: 5px; 
-    font-size: 12px;
+    font-size: 14px;
     font-family: Rajdhani;
     text-align: center;
-    border-image: linear-gradient(60deg,var(--myGrey50), var(--myMarineBleu)) 1 / 1.5px;
-    -o-border-image: linear-gradient(60deg,var(--myGrey50), var(--myMarineBleu)) 1 / 1.5px;
+    border-image: linear-gradient(60deg, rgba(255, 254, 254, 0.527), rgba(0, 0, 255, 0.589)) 1 / 1.5px;
+    -o-border-image: linear-gradient(60deg,rgba(255, 254, 254, 0.527), rgba(0, 0, 255, 0.589)) 1 / 1.5px;
 }
 
 .sec7__form__div__fieldset__radioContain__choice+ label:hover {
@@ -92,7 +92,7 @@ fieldset {
 }
 
 .sec7__form__div textarea::placeholder {
-    font-size: 12px;
+    font-size: 14px;
     font-family: 'Space Grotesk';
 }
 
@@ -108,4 +108,8 @@ fieldset {
 .invalidMail {
 color: red;
 opacity: 0.8;
+}
+
+.sec7__form__div__checkbox label {
+    font-family: 'Cantarell';
 }
