--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -11,6 +11,7 @@
  .header ul {
      display: flex;
      justify-content: space-between;
+     align-items: center;
      flex-wrap: wrap;
      list-style-type: none;
      margin: 0;
@@ -44,6 +45,12 @@
      margin: 5px 20px;
  }
 
+.navBarBtn {
+    width: 120px;
+    height: 30px;
+    padding: 0 ;
+    opacity: 0.8
+}
  .header__divLogo {
     width: 125px;
  }
