--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -1,5 +1,9 @@
+.inscription h2 {
+    font-family: 'Adventure';
+}
+
 .inscription .formulaire {
-    background: radial-gradient(at 200% 50%, #B11313 , #07338C);
+    background: radial-gradient(at 200% 50%, #B11313, #07338C);
     max-width: 85%;
     padding: 60px 10%;
     margin-top: -35px;
@@ -23,11 +27,11 @@ form label {
 }
 
 .form-check-label {
-    font-family: 'Cantarell' ;
+    font-family: 'Cantarell';
 }
 
 .form-control {
-    border : solid 1px white;
+    border: solid 1px #ffffff77;
     background-color: transparent;
     border-radius: 0px;
 }
@@ -40,25 +44,25 @@ form label {
     font-weight: bold;
 }
 
- /* The switch - the box around the slider */
- .switch {
+/* The switch - the box around the slider */
+.switch {
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input[type="checkbox"] {
+}
+
+/* Hide default HTML checkbox */
+.switch input[type="checkbox"] {
     opacity: 0;
     width: 60px;
     height: 30px;
     position: absolute;
     z-index: 10;
-  }
-  
-  /* The slider */
-  .slider {
+}
+
+/* The slider */
+.slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -68,9 +72,9 @@ form label {
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  .slider:before {
+}
+
+.slider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -80,34 +84,51 @@ form label {
     background-color: #B11313dd;
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  input[type="checkbox"]:checked + .slider {
+}
+
+input[type="checkbox"]:checked+.slider {
     background-color: #07338Cdd;
-  }
-  
-  input[type="checkbox"]:focus + .slider {
+}
+
+input[type="checkbox"]:focus+.slider {
     box-shadow: 0 0 1px #07338Cdd;
-  }
-  
-  input[type="checkbox"]:checked + .slider:before {
+}
+
+input[type="checkbox"]:checked+.slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
+}
+
+/* Rounded sliders */
+.slider.round {
     border-radius: 34px;
-  }
-  
-  .slider.round:before {
+}
+
+.slider.round:before {
     border-radius: 50%;
-  }
-  
-  .socialLogo {
+}
+
+.socialLogo {
     width: 50%;
     min-width: 100px;
     display: flex;
     justify-content: space-between;
-  }
+}
+
+/*Ligne après connectez vous avec */
+.connectWith__container {
+    display: flex;
+    align-items: center;
+}
+
+.connectWith {
+    min-width: fit-content
+}
+
+.line {
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    margin-left: 10px;
+}
