--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -1,21 +1,40 @@
 body {
-    background: linear-gradient(#000000, #212E3E);
+  background: linear-gradient(#000000, #212E3E);
 }
 
 .backgroundImg {
-    position: absolute;
-    z-index: -10;
-  } 
-  
-  .backgroundImg img {
-    width : 100% ;
-  }
+  position: absolute;
+  z-index: -10;
+}
 
-  #appBody {
-    margin-right: 5%;
-    margin-left: 5%;
+.backgroundImg img {
+  width: 100%;
+}
+
+#appBody {
+  margin-right: 5%;
+  margin-left: 5%;
 }
 
 main {
-    z-index: 10;
+  z-index: 10;
+}
+
+.bgRadiant {
+  position: absolute;
+  overflow-x: hidden;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(at 80% 20%, #7c767586 5%, #000000 95%), linear-gradient(to bottom, black, transparent, #000000);
+
+}
+
+.backgroundImg img {
+  position: relative;
+  width: 150%;
+  top: 20px;
+  right: 0px;
+  left: -40%
 }
