--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -39,7 +39,7 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, black 25px,#7c767586 400px,  #212E3E 800px);
+  background: linear-gradient(to bottom, black 25px,#7c76754b 300px, rgba(0, 0, 0) 800px,  #212E3E 1200px);
 }
 
 .backgroundImg img {
