--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -2,6 +2,10 @@ body {
   background: linear-gradient(#000000, #212E3E);
 }
 
+#appContainer {
+  min-height: 100vh;
+}
+
 .backgroundImg {
   max-height: 100%;
   position: absolute;
@@ -34,18 +38,20 @@ main {
 }
 
 .eshopRadiant {
-  overflow-x: hidden;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   background: linear-gradient(to bottom, black 25px,#7c76754b 300px, rgba(0, 0, 0) 800px,  #212E3E 1200px);
 }
 
+.compteRadiant {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, black 2%, transparent 30%), linear-gradient(to bottom, black 10px , transparent 150px, transparent, rgba(0, 0, 0, 0.945) 800px,  #212E3E 1100px);
+}
+
 .backgroundImg img {
   position: relative;
   width: 150%;
-  top: 20px;
   right: 0px;
   left: -40%
 }
