First build after orderRecap handle total reduction and total payement

--- a/src/styles/OrderRecap.css
+++ b/src/styles/OrderRecap.css
@@ -16,5 +16,8 @@
     border-radius: 0px;
     border: none;
     background-color: linear-gradient(to right, #19587D, #B11313);
+}
 
+#codePromoForm {
+background: none;
 }
