--- a/src/styles/MonCompteInfoPers.css
+++ b/src/styles/MonCompteInfoPers.css
@@ -14,3 +14,31 @@ h3 {
 .monCompte__Container .monCompte__infoPersContainer {
     margin-bottom: 100px;
 }
+
+.changeInfoPersContainer {
+    position: fixed ;
+    width: 90%;
+    height: 90%;
+    top: 5%;
+    left: 5%;
+    background: linear-gradient(to bottom, #19587d, #19587db2)
+
+}
+
+.changeFormInput {
+    position: relative ;
+    height: 100% ;
+    background: none;
+    max-width: 800px;
+    min-width: 50%;
+}
+
+.closeChangeForm {
+    position: absolute;
+    top: 10px ;
+    right: 10px
+}
+
+.closeChangeForm:hover {
+    color: red
+}
