Create DeliveryPayment.js and separate orderRecap

--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -35,10 +35,13 @@
 }
 
 .sous-total {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .sous-total h3 {
     font-family: Cantarell;
     color: #bebebe;
+    margin-bottom: 20px;
 }
