--- a/src/styles/DeliveryPayment.css
+++ b/src/styles/DeliveryPayment.css
@@ -2,3 +2,9 @@
     border: solid 2px grey;
     margin-bottom: 50px;
 }
+
+.submitOrder {
+    width: 350px;
+    height: 100px;
+    font-size: 2em
+}
