--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -49,7 +49,8 @@
     margin-left: 25px;
 }
 
-@media (max-width: 600px) {
+
+@media (max-width: 1000px) {
     .sect1 h1 {
         font-size: 96px ;
     }
@@ -58,6 +59,23 @@
     }
     .sect1 {
         flex-direction: column;
+    }
+
+    .sect1__logoDc img{
+        width: 200px;
+    }
+}
+
+@media (max-width: 600px) {
+    .sect1 h1 {
+        font-size: 50px ;
+    }
+    .sect1 h2 {
+        font-size: 24px ;
+    }
+
+    .sect1__logoDc img{
+        width: 100px;
     }
 }
 
@@ -76,7 +94,7 @@
 .sec8__figure {
     min-width: 60%;
     margin: 75px 0;
-    font-size: 12px;
+    font-size: 16px;
     text-align: center;
 }
 
