--- a/src/styles/MonCompte.css
+++ b/src/styles/MonCompte.css
@@ -7,6 +7,13 @@
     font-size: 85px;
     font-weight: bold;
 }
+
+@media (max-width: 600px) {
+    .monCompte__header h1 {
+        font-size: 50px ;
+    }
+}
+
 .userStatus {
     font-size: 1.3em;
 }
