--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -55,8 +55,20 @@ h2 {
   margin: 20px 0;
 }
 
+@media (max-width: 600px) {
+  h2 {
+    font-size: 24px;
+  }
+}
+
 section {
-  margin: 50px 2% 50px 10%
+  margin: 50px 0% 50px 10%
+}
+
+@media (max-width: 600px) {
+  section {
+    margin: 50px 0% 50px 0%
+  }
 }
 
 /* Effet fadeIn sur tous les éléments */
