--- a/src/styles/ProductDetail.css
+++ b/src/styles/ProductDetail.css
@@ -11,3 +11,9 @@ font-size: 4em;
 .productImgContainer img {
     width: 100%
 }
+
+@media (max-width: 900px) {
+    .ProductDetailContainer {
+        margin-top: 250px;
+    }
+}
