--- a/src/styles/MonCompteTabs.css
+++ b/src/styles/MonCompteTabs.css
@@ -30,7 +30,7 @@
     top: 10%;
     left: 10%;
     background: radial-gradient(at 150% 50%, #b4202e, #0f3b55 70%);
-    z-index: 2;
+    z-index: 10000;
     display: flex;
     justify-content: center;
     align-items:center;
@@ -55,4 +55,14 @@
 .popup-content button {
     height: 75px;
     font-size: 0.6em;
+}
+
+@media (max-width: 800px) {
+    .monCompte__popupBoxContainer div {
+        font-size: 1.5em;
+    }
+    .popup-content button {
+        height: 40px;
+        font-size: 16px;
+    }
 }
